# protect

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
causalprotect/: inference.py  models.py  utils.py
protect/: distributions.py  inference.py  models.py  utils.py
tests/: model.py  priors.csv  test_baselines.py  test_distributions.py  test_hello.py  test_inference.py  test_integration.py  test_marginalization.py  test_metrics.py  test_modelchecks.py  test_notebooks.py  test_postpred.py  test_ppmixture.py  test_protectmodel.py  test_utils.py  testdata.csv
tests/rcode/: auc.R  baselines.R  cindex.R  marginal_hr.R  pgw.R  pgwsource.R
tutorial/: data1000.csv  data1000_full.csv  inference_demo.ipynb  metadata.yaml  model.py  simprms.csv  simulate_data.py
